sandbox/output
StringCalculator.java:11: error: array required, but String found
            return Integer.valueOf(number[0]) + Integer.valueOf(number[1]);
                                         ^
StringCalculator.java:11: error: array required, but String found
            return Integer.valueOf(number[0]) + Integer.valueOf(number[1]);
                                                                      ^
2 errors
